@@ -47,7 +47,13 @@ else
 fi
 
 if [ -z "$JAVA_OPTS_SCRIPT" ] ; then
-    JAVA_OPTS_SCRIPT="-XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dfile.encoding=UTF8 -Dpolyglot.engine.WarnInterpreterOnly=false"
+  JAVA_OPTS_SCRIPT="-XX:+HeapDumpOnOutOfMemoryError \
+        --add-exports java.management/sun.management=ALL-UNNAMED \
+        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED \
+        --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED \
+        -Dpolyglot.engine.WarnInterpreterOnly=false \
+        -Djava.awt.headless=true -Dfile.encoding=UTF8 \
+        -Djava.util.logging.config.file=config/arcadedb-log.properties"
 fi
 
 exec "$JAVA" $JAVA_OPTS \
